@@ -1,3 +1,6 @@
+[B]0.9.28[/B]
+DIALOGVIDEOINFO - Fix for trailer button (hopefully)
+
 [B]0.9.27[/B]
 SKINSHORTCUTS Fix enable / disable code when in skinshortcuts and adding item
 WIDGETS Add checks for playlists ending with name Genres.xsp, Studios.xsp, Countries.xsp etc
